--- a/Public/assets/css/style.css
+++ b/Public/assets/css/style.css
@@ -2,12 +2,11 @@
 /* ─────────────────────────────────────────────────────────
 /* ------------------ C S S   S T A R T --------------------
 /* ───────────────────────────────────────────────────────── */
-
 /* ─── IMPORTATION ───────────────────────────────────────── */
-
 @import url("reset.css");
+/* ─── VARIABLES ───────────────────────────────────────── */
+/* ─── MIXINS ──────────────────────────────────────────── */
 /* ─── BASE ──────────────────────────────────────────────── */
-
 body {
   font-family: "Kanit", sans-serif;
   font-size: 16px;
@@ -42,7 +41,7 @@ h1.section-title::before {
   top: 100%;
   left: 50%;
   -webkit-transform: translate3d(-50%, 0, 0);
-  transform: translate3d(-50%, 0, 0);
+          transform: translate3d(-50%, 0, 0);
   width: 200px;
   height: 4px;
   border-radius: 50px;
@@ -92,10 +91,11 @@ a.btn-blue {
   color: white;
 }
 
-a.btn-orange:hover, a.btn-blue:hover {
+a.btn-orange:hover,
+a.btn-blue:hover {
   border: none;
   -webkit-filter: brightness(90%);
-  filter: brightness(90%);
+          filter: brightness(90%);
 }
 
 .btn-submit {
@@ -128,10 +128,11 @@ a.btn-orange:hover, a.btn-blue:hover {
   color: white;
 }
 
-.btn-orange:hover, .btn-blue:hover {
+.btn-orange:hover,
+.btn-blue:hover {
   border: none;
   -webkit-filter: brightness(90%);
-  filter: brightness(90%);
+          filter: brightness(90%);
 }
 
 form {
@@ -150,7 +151,15 @@ label {
   margin-bottom: 10px;
 }
 
-input[type=text], input[type=email], input[type=password], input[type=date], input[type=file], input[type=tel], input[type=number], select, textarea {
+input[type=text],
+input[type=email],
+input[type=password],
+input[type=date],
+input[type=file],
+input[type=tel],
+input[type=number],
+select,
+textarea {
   outline: none;
   border: 1px solid #dddddd;
   border-radius: 100px;
@@ -163,9 +172,17 @@ input[type=text], input[type=email], input[type=password], input[type=date], inp
   width: 80%;
 }
 
-input[type=text]:focus, input[type=email]:focus, input[type=password]:focus, input[type=date]:focus, input[type=file]:focus, input[type=tel]:focus, input[type=number]:focus, select:focus, textarea:focus {
+input[type=text]:focus,
+input[type=email]:focus,
+input[type=password]:focus,
+input[type=date]:focus,
+input[type=file]:focus,
+input[type=tel]:focus,
+input[type=number]:focus,
+select:focus,
+textarea:focus {
   -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2), 0px 0px 10px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2), 0px 0px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2), 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 input::-webkit-input-placeholder {
@@ -184,7 +201,8 @@ input::placeholder {
   opacity: .5;
 }
 
-#inscription form, #connexion form {
+#inscription form,
+#connexion form {
   text-align: center;
   width: 100%;
 }
@@ -207,7 +225,7 @@ input::placeholder {
   top: 50%;
   padding-left: 10px;
   -webkit-transform: translate3d(0, -50%, 0);
-  transform: translate3d(0, -50%, 0);
+          transform: translate3d(0, -50%, 0);
   font-family: 'Font Awesome 5 Free';
   font-weight: 900;
   color: white;
@@ -225,11 +243,11 @@ input::placeholder {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-color: #fff;
   border-radius: 100px;
   float: right;
@@ -274,9 +292,10 @@ input::placeholder {
   transition: .2s ease-out;
 }
 
-.user-card a.logout-btn:hover, .user-card a.account-btn:hover {
+.user-card a.logout-btn:hover,
+.user-card a.account-btn:hover {
   -webkit-filter: brightness(90%);
-  filter: brightness(90%);
+          filter: brightness(90%);
 }
 
 #tooltipLogout {
@@ -306,23 +325,28 @@ input::placeholder {
   width: 100%;
   display: -ms-grid;
   display: grid;
-  grid-template-areas: "g n" "m m";
+      grid-template-areas: "g n"
+ "m m";
   grid-gap: 20px;
   grid-auto-flow: dense;
 }
 
-.grid .fav-garderie, .grid .fav-nourisse, .grid .map {
+.grid .fav-garderie,
+.grid .fav-nourisse,
+.grid .map {
   padding: 15px;
   border-radius: 20px;
   -webkit-box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.1);
   -webkit-transition: .2s ease-out;
   transition: .2s ease-out;
 }
 
-.grid .fav-garderie:hover, .grid .fav-nourisse:hover, .grid .map:hover {
+.grid .fav-garderie:hover,
+.grid .fav-nourisse:hover,
+.grid .map:hover {
   -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2), 0px 0px 50px rgba(0, 0, 0, 0.1);
 }
 
 .fav-garderie {
@@ -368,11 +392,13 @@ canvas.mapboxgl-canvas:focus {
   width: 70%;
 }
 
-.addChild input, .modifyInfos input {
+.addChild input,
+.modifyInfos input {
   width: 100%;
 }
 
-.addChild form, .modifyInfos form {
+.addChild form,
+.modifyInfos form {
   text-align: center;
 }
 
@@ -424,15 +450,32 @@ a.add {
 
 a.add:hover {
   -webkit-filter: brightness(90%);
-  filter: brightness(90%);
+          filter: brightness(90%);
 }
 
-p#selected_allergy_list, p#selected_disease_list {
+p#selected_allergy_list,
+p#selected_disease_list {
   margin-top: 10px;
 }
 
-/* ─── NAVBAR ───────────────────────────────────────── */
+/* ─── LOADER ────────────────────────────────────────────── */
+#loader {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  left: 0;
+  top: 0;
+  z-index: 999;
+}
 
+#loader img {
+  width: 100%;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+/* ─── NAVBAR ───────────────────────────────────────── */
 #l-header {
   position: relative;
   z-index: 99;
@@ -442,7 +485,7 @@ p#selected_allergy_list, p#selected_disease_list {
 }
 
 ul.nav-links {
-  z-index: 999;
+  z-index: 115;
   padding: 20px;
   position: absolute;
   width: 400px;
@@ -450,19 +493,19 @@ ul.nav-links {
   top: 0;
   left: 0;
   -webkit-transform: translate3d(-100%, 132px, 0);
-  transform: translate3d(-100%, 132px, 0);
+          transform: translate3d(-100%, 132px, 0);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
+      justify-content: space-around;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   background-color: white;
   border-radius: 0 50px 50px 0;
   -webkit-transition: all .2s ease-out;
@@ -485,16 +528,17 @@ ul.nav-links li a:hover {
   opacity: 1;
 }
 
-nav, nav .right-links ul {
+nav,
+nav .right-links ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 nav {
@@ -511,14 +555,14 @@ nav .right-links ul li {
 
 nav .right-links ul li a.logo img {
   -webkit-transform: rotate(0);
-  transform: rotate(0);
+          transform: rotate(0);
   -webkit-transition: all .2s ease-out;
   transition: all .2s ease-out;
 }
 
 nav .right-links ul li a.logo:hover img {
   -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
+          transform: rotate(45deg);
 }
 
 nav .hamburger {
@@ -542,7 +586,7 @@ nav .hamburger .top {
   top: 0;
   left: 0;
   -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
   width: 80%;
 }
 
@@ -550,14 +594,14 @@ nav .hamburger .middle {
   top: 50%;
   left: 0;
   -webkit-transform: translate3d(0, -50%, 0);
-  transform: translate3d(0, -50%, 0);
+          transform: translate3d(0, -50%, 0);
 }
 
 nav .hamburger .bottom {
   top: 100%;
   left: 0;
   -webkit-transform: translate3d(0, -100%, 0);
-  transform: translate3d(0, -100%, 0);
+          transform: translate3d(0, -100%, 0);
   width: 80%;
 }
 
@@ -565,7 +609,7 @@ nav .hamburger.is-active .top {
   top: 50%;
   left: 0;
   -webkit-transform: translate3d(0, -50%, 0) rotate(-45deg);
-  transform: translate3d(0, -50%, 0) rotate(-45deg);
+          transform: translate3d(0, -50%, 0) rotate(-45deg);
 }
 
 nav .hamburger.is-active .middle {
@@ -577,18 +621,17 @@ nav .hamburger.is-active .bottom {
   top: 50%;
   left: 0;
   -webkit-transform: translate3d(0, -50%, 0) rotate(45deg);
-  transform: translate3d(0, -50%, 0) rotate(45deg);
+          transform: translate3d(0, -50%, 0) rotate(45deg);
 }
 
 ul.nav-links.is-active {
   -webkit-transform: translate3d(0, 132px, 0);
-  transform: translate3d(0, 132px, 0);
+          transform: translate3d(0, 132px, 0);
   -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3), 0px 0px 50px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3), 0px 0px 50px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3), 0px 0px 50px rgba(0, 0, 0, 0.1);
 }
 
 /* ─── FOOTER ───────────────────────────────────────── */
-
 #l-footer {
   position: relative;
   z-index: 1;
@@ -603,40 +646,22 @@ ul.nav-links.is-active {
   font-weight: 200;
 }
 
-/* ─── LOADER ────────────────────────────────────────────── */
-
-#loader {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  left: 0;
-  top: 0;
-  z-index: 999;
-}
-
-#loader img {
-  width: 100%;
-  height: 100vh;
-  -o-object-fit: cover;
-  object-fit: cover;
-}
-
 /* ─── HOME ──────────────────────────────────────────────── */
-
 .flex {
   padding: 50px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.left, .right {
+.left,
+.right {
   width: 50%;
   height: 378px;
 }
@@ -681,8 +706,8 @@ ul.nav-links.is-active {
 }
 
 /* ─── SIGNUP ──────────────────────────────────────────────── */
-
-.illustration, .form {
+.illustration,
+.form {
   width: 50%;
   margin: 0 auto;
 }
@@ -698,7 +723,7 @@ ul.nav-links.is-active {
   left: 50%;
   top: 35%;
   -webkit-transform: translate(-50%, -50%) !important;
-  transform: translate(-50%, -50%) !important;
+          transform: translate(-50%, -50%) !important;
 }
 
 .card {
@@ -710,8 +735,7 @@ ul.nav-links.is-active {
   margin-left: 0;
 }
 
-/* ─── SIGNUP ──────────────────────────────────────────────── */
-
+/* ─── SIGNIN ──────────────────────────────────────────────── */
 .card2 {
   width: 500px;
 }
@@ -726,159 +750,7 @@ ul.nav-links.is-active {
   display: block;
 }
 
-/* ─── RESPONSIVE ───────────────────────────────────────── */
-
-@media screen and (max-width: 1280px) {
-  #account .flex {
-    width: 80%;
-  }
-}
-
-@media screen and (max-width: 1120px) {
-  #account .flex {
-    width: 90%;
-  }
-}
-
-@media screen and (max-width: 1000px) {
-  .grid {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-  #account .flex {
-    width: 100%;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-  #account .modifyInfos {
-    padding-top: 50px;
-    border-top: 1px solid #ddd;
-    border-left: none;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .flex {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-    -ms-flex-direction: column-reverse;
-    flex-direction: column-reverse;
-    padding: 15px;
-  }
-  .left, .right {
-    width: 100%;
-    text-align: center;
-  }
-  .left, .right {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .right {
-    margin-bottom: 50px;
-  }
-  .illustration, .form {
-    width: 100% !important;
-  }
-  .illustration {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 700px) {
-  ul.nav-links {
-    width: 50%;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  nav .right-links ul img {
-    width: 50px;
-  }
-  nav .right-links ul li {
-    margin: 0 10px;
-  }
-  a.btn {
-    font-size: 1em;
-  }
-  ul.nav-links {
-    height: calc(100vh - 90px);
-    -webkit-transform: translate3d(-100%, 90px, 0);
-    transform: translate3d(-100%, 90px, 0);
-  }
-  ul.nav-links.is-active {
-    -webkit-transform: translate3d(0, 90px, 0);
-    transform: translate3d(0, 90px, 0);
-  }
-  input[type=text], input[type=email], input[type=password], input[type=date], input[type=file], input[type=tel], input[type=number], textarea {
-    width: 100%;
-  }
-  select {
-    width: 90%;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  ul.nav-links {
-    width: 100%;
-    border-radius: 0;
-  }
-  .user-card {
-    float: none;
-    margin: 25px auto 0 auto;
-  }
-}
-
-@media screen and (max-width: 450px) {
-  nav {
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-  }
-  nav .right-links ul {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-    -ms-flex-direction: column-reverse;
-    flex-direction: column-reverse;
-  }
-  nav .right-links ul li {
-    margin: 15px 0;
-  }
-  .user-card {
-    width: 100%;
-    -webkit-transform: scale(0.8);
-    transform: scale(0.8);
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    text-align: center;
-  }
-  .flex {
-    padding: 15px 0;
-  }
-}
-
-@media screen and (max-width: 300px) {
-  h1.section-title {
-    font-size: 8vh;
-  }
-}
-
-/* ─────────────────────────────────────────────────────────
-/* ------------------- C S S   E N D -----------------------
-/* ───────────────────────────────────────────────────────── */
-
+/* ─── MULTICHECKBOX ────────────────────────────────────────── */
 .MultiCheckBox {
   border: 1px solid #e2e2e2;
   padding: 5px;
@@ -919,11 +791,9 @@ ul.nav-links.is-active {
   background-color: #cfcfcf;
 }
 
-.MultiCheckBoxDetailBody>div>div {
+.MultiCheckBoxDetailBody > div > div {
   float: left;
 }
-
-.MultiCheckBoxDetail>div>div:nth-child(1) {}
 
 .MultiCheckBoxDetailHeader {
   overflow: hidden;
@@ -932,15 +802,177 @@ ul.nav-links.is-active {
   background-color: #3d3d3d;
 }
 
-.MultiCheckBoxDetailHeader>input {
+.MultiCheckBoxDetailHeader > input {
   position: absolute;
   top: 4px;
   left: 3px;
 }
 
-.MultiCheckBoxDetailHeader>div {
+.MultiCheckBoxDetailHeader > div {
   position: absolute;
   top: 5px;
   left: 24px;
   color: #fff;
 }
+
+/* ─── RESPONSIVE ───────────────────────────────────────── */
+@media screen and (max-width: 1280px) {
+  #account .flex {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 1120px) {
+  #account .flex {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .grid {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #account .flex {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #account .modifyInfos {
+    padding-top: 50px;
+    border-top: 1px solid #ddd;
+    border-left: none;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    padding: 15px;
+  }
+  .left,
+  .right {
+    width: 100%;
+    text-align: center;
+  }
+  .left,
+  .right {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .right {
+    margin-bottom: 50px;
+  }
+  .illustration,
+  .form {
+    width: 100% !important;
+  }
+  .illustration {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  ul.nav-links {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  nav .right-links ul img {
+    width: 50px;
+  }
+  nav .right-links ul li {
+    margin: 0 10px;
+  }
+  a.btn {
+    font-size: 1em;
+  }
+  ul.nav-links {
+    height: calc(100vh - 90px);
+    -webkit-transform: translate3d(-100%, 90px, 0);
+            transform: translate3d(-100%, 90px, 0);
+  }
+  ul.nav-links.is-active {
+    -webkit-transform: translate3d(0, 90px, 0);
+            transform: translate3d(0, 90px, 0);
+  }
+  input[type=text],
+  input[type=email],
+  input[type=password],
+  input[type=date],
+  input[type=file],
+  input[type=tel],
+  input[type=number],
+  textarea {
+    width: 100%;
+  }
+  select {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  ul.nav-links {
+    width: 100%;
+    border-radius: 0;
+  }
+  .user-card {
+    float: none;
+    margin: 25px auto 0 auto;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  nav {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  nav .right-links ul {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  nav .right-links ul li {
+    margin: 15px 0;
+  }
+  .user-card {
+    width: 100%;
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .flex {
+    padding: 15px 0;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  h1.section-title {
+    font-size: 8vh;
+  }
+}
+
+/* ─────────────────────────────────────────────────────────
+/* ------------------- C S S   E N D -----------------------
+/* ───────────────────────────────────────────────────────── */
