--- a/Public/assets/css/style.css
+++ b/Public/assets/css/style.css
@@ -202,13 +202,14 @@ input::placeholder {
 }
 
 #inscription form,
-#connexion form {
+#connexion form,
+#reserve form {
   text-align: center;
   width: 100%;
 }
 
 .error {
-  display: inline-block;
+  display: block;
   position: relative;
   padding: 5px 35px;
   color: white;
@@ -216,6 +217,10 @@ input::placeholder {
   border-radius: 100px;
   font-weight: 200;
   word-break: break-word;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 10px auto 0 auto;
 }
 
 .error::before {
