--- a/Pro/Public/assets/css/main.css
+++ b/Pro/Public/assets/css/main.css
@@ -297,3 +297,63 @@ body {
 #NurseryDashboard .content .contentItem-1 .box-4 {
   background-color: #dfe4ea;
 }
+
+/*-- GEO LIST --*/
+
+#contentItem-7 .geolisting:hover{
+  transition-duration: 0.3s;
+  color: #227093;
+}
+
+#contentItem-7 .geolisting{
+  cursor: pointer;
+}
+
+#contentItem-7{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 100%;
+}
+
+#contentItem-7 input {
+  background-color: #f1f2f6;
+  outline: none;
+  border: none;
+  font-size: 16px;
+  padding: 4px 8px;
+  font-weight: 500;
+  width: 400px;
+}
+
+#geolist{
+  height: 200px;
+  margin-left: 67px;
+  line-height: 26px;
+}
+
+#geolist tr td{
+  background-color: #f1f2f6;
+  border-bottom: #7f8c8d 1px solid;
+  width: 400px;
+  padding: 2px 4px;
+}
+
+#contentItem-7 h3{
+  margin: 20px 0;
+  font-size: 18px;
+}
+
+#contentItem-7 h4{
+  font-size: 17px;
+  margin: 15px 0;
+}
+
+#contentItem-7 h4.success span{
+  color:#009432;
+  font-weight: 700;
+}
+
+#contentItem-7 .resize{
+  height: 300px;
+}
