ajout geoloc sur user.php

--- a/Public/assets/css/style.css
+++ b/Public/assets/css/style.css
@@ -389,6 +389,14 @@ input::placeholder {
   padding: 15px 0;
 }
 
+.geolocalisation #geolocMe {
+  margin-right: .5em;
+}
+
+.geolocalisation #searchGeo {
+  margin-left: .5em;
+}
+
 #map {
   border-radius: 15px;
   border: 1px solid white;
@@ -1093,3 +1101,4 @@ ul.nav-links.is-active {
 /* ─────────────────────────────────────────────────────────
 /* ------------------- C S S   E N D -----------------------
 /* ───────────────────────────────────────────────────────── */
+/*# sourceMappingURL=style.css.map */
