--- a/Pro/Public/assets/css/main.css
+++ b/Pro/Public/assets/css/main.css
@@ -361,6 +361,41 @@ i.animation {
   animation: activeInput 2s ease-in-out infinite;
 }
 
+/*-- Envoye des fichiers  --*/
+
+#contentItem-5{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 100%;
+}
+
+#contentItem-5 input,button {
+  background-color: #f1f2f6;
+  outline: none;
+  border: none;
+  font-size: 16px;
+  padding: 4px 8px;
+  font-weight: 500;
+  width: 400px;
+}
+
+#contentItem-5 button {
+  width: 200px;
+  cursor: pointer;
+}
+
+#contentItem-5 button:hover{
+  background-color: #227093;
+  color: #f1f2f6;
+  transition-duration: 0.3s;
+}
+
+#contentItem-5 h2{
+  margin: 20px 0;
+  font-size: 18px;
+}
+
 /*-----------KEY FRAME-----------*/
 
 @keyframes activeInput {
