--- a/Pro/Public/assets/css/main.css
+++ b/Pro/Public/assets/css/main.css
@@ -395,6 +395,7 @@ i.animation {
 #contentItem-5 h2{
   margin: 20px 0;
   font-size: 18px;
+}
 /*------------DASHBOARD----------*/
 
 .titleSection {
