--- a/Public/assets/css/style.css
+++ b/Public/assets/css/style.css
@@ -389,12 +389,39 @@ input::placeholder {
   padding: 15px 0;
 }
 
-.geolocalisation #geolocMe {
+.geolocalisation #geolocMe,
+.geolocalisation span {
   margin-right: .5em;
 }
 
 .geolocalisation #searchGeo {
   margin-left: .5em;
+}
+
+#geolist,
+#geolist tr,
+#geolist td {
+  width: 100%;
+}
+
+#geolist i {
+  margin-right: 7px;
+}
+
+#geolist td {
+  padding: 5px 15px;
+  border: 1px solid #ddd;
+  cursor: pointer;
+  border-radius: 10px;
+  text-transform: uppercase;
+  font-size: .9em;
+  text-align: center;
+  -webkit-transition: .2s ease-out;
+  transition: .2s ease-out;
+}
+
+#geolist td:hover {
+  background-color: #ccc;
 }
 
 #map {
@@ -991,9 +1018,17 @@ ul.nav-links.is-active {
   ul.nav-links {
     width: 50%;
   }
-  .geolocalisation button {
+  .geolocalisation button,
+  .geolocalisation span {
     width: 100%;
     margin: 10px 0;
+  }
+  .geolocalisation input {
+    width: 100%;
+  }
+  .geolocalisation span {
+    text-align: center;
+    display: block;
   }
 }
 
