--- a/Pro/Public/assets/css/main.css
+++ b/Pro/Public/assets/css/main.css
@@ -75,8 +75,11 @@ body {
 #main .box .content1right {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding-bottom: 5vh;
+  justify-content: space-around;
+  padding-bottom: 10px;
+}
+#main .box2 .title2 p{
+  margin-bottom: 25px;
 }
 
 #main .text {
@@ -117,7 +120,9 @@ body {
   left: 50px;
 }
 
+
 /*-------- LOGIN --------*/
+
 
 #loginSectionNounou {
   display: flex;
@@ -188,15 +193,15 @@ body {
   color: white;
   display: flex;
   justify-content: space-between;
-  padding: 2vh 0;
-  height: 15vh;
-  font-size: 2vh;
+  height: 70px;
+  font-size: 20px;
 }
 
 .logoPro img {
-  width: 5vw;
+  width: 50px;
   position: relative;
-  right: 40%;
+  top: 5px;
+  right: 40px;
 }
 
 .proNav ul li a {
@@ -211,6 +216,69 @@ body {
   text-align: center;
   letter-spacing: 5px;
 }
+
+.proNav ul li{
+  padding: 25px 25px;
+  margin: 0 15px;
+}
+
+
+header nav.proNav ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.proNav ul li:hover a{
+  transform: translateY(-600px);
+  animation: 0s slideIn ease-in-out forwards 0s;
+  z-index: 10;
+  opacity: 0;
+  position: relative;
+}
+
+.proNav ul li:hover a::before{
+  content: '';
+  height: 20px;
+  width: 0%;
+  position: absolute;
+  bottom: -5px;
+  left: 25px;
+  animation: 0.5s underline ease-in-out forwards 0s;
+  mix-blend-mode: screen;
+}
+
+@keyframes slideIn {
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes underline {
+  100% {
+    width: 100%;
+  }
+}
+
+.proNav ul li:hover a.deco::before{
+  background-color: #c0392b;
+}
+.proNav ul li:hover a.particulier::before{
+  background-color: #9980FA;
+}
+.proNav ul li:hover a.accueil::before{
+  background-color: #12CBC4;
+}
+.proNav ul li:hover a.espace::before{
+  background-color: #A3CB38;
+}
+
+.proNav ul li:active a{
+  position: relative;
+  top: 2px;
+}
+
 
 /*--------------------------------------------*/
 /*-------------DASHBOARD NOUNOU---------------*/
